--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@
         <li><a href="https://home-manager-options.extranix.com/">Hm Opts</a></li>
         <li><a href="https://github.com/nixos/nixpkgs">Repo</a></li>
       </ul>
+      <ul class="green">
+        <a style="font-size:22px">🙄</a>
+        <li><a href="https://1337x.proxyninja.org/">1337x</a></li>
+        <li><a href="https://nyaa.land/">Nyaa.si</a></li>
+        <li><a href="https://comick.io/">Comick</a></li>
+        <li><a href="https://www.braflix.ru/">Braflix</a></li>
+      </ul>
     </nav>
     <div class="codes" id="codes">
       <script>
