made changes according to my need

--- a/index.html
+++ b/index.html
@@ -107,14 +107,13 @@
     </div>
     <header>
       <br>
-      <h1>ごきげんよう <span class="flair">Zen</span></h1>
+      <h1>ごきげんよう <span class="flair">Swarn</span></h1>
     </header>
     <nav>
       <br>
       <ul class="blue">
         <a style="font-size:22px">Social</a>
-        <li><a href="https://discord.com/channels/@me">Discord</a></li>
-        <li><a href="https://twitter.com/">Twitter</a></li>
+        <li><a href="https://mstdn.social/">Mastodon</a></li>
         <li><a href="https://app.element.io">Matrix</a></li>
         <li><a href="https://web.whatsapp.com/">Whatsapp</a></li>
       </ul>
@@ -122,15 +121,14 @@
         <a style="font-size:22px">Nerd</a>
         <li><a href="https://github.com/">Github</a></li>
         <li><a href="https://mail.proton.me/">Protonmail</a></li>
-        <li><a href="https://anilist.co">Anilist</a></li>
+        <li><a href="https://gmail.com/">Gmail</a></li>
         <li><a href="https://chat.openai.com">ChatGPT</a></li>
       </ul>
       <ul class="yellow">
-        <a style="font-size:22px">NixOS</a>
-        <li><a href="https://wiki.nixos.org/wiki/">Wiki</a></li>
-        <li><a href="https://search.nixos.org/packages?channel=unstable">Pkgs</a></li>
-        <li><a href="https://home-manager-options.extranix.com/">Hm Opts</a></li>
-        <li><a href="https://github.com/nixos/nixpkgs">Repo</a></li>
+        <a style="font-size:22px">Arch Linux</a>
+        <li><a href="https://wiki.archlinux.org">Arch Wiki</a></li>
+        <li><a href="https://archlinux.org/packages/">Pkgs</a></li>
+        <li><a href="https://aur.archlinux.org/">AUR</a></li>
       </ul>
       <ul class="green">
         <a style="font-size:22px">🙄</a>
