--- a/index.html
+++ b/index.html
@@ -132,8 +132,7 @@
       </ul>
       <ul class="green">
         <a style="font-size:22px">🙄</a>
-        <li><a href="https://1337x.proxyninja.org/">1337x</a></li>
-        <li><a href="https://nyaa.land/">Nyaa.si</a></li>
+        <li><a href="https://1337x.to/">1337x</a></li>
         <li><a href="https://comick.io/">Comick</a></li>
         <li><a href="https://www.braflix.ru/">Braflix</a></li>
       </ul>
